--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@angular/router": "^5.2.0",
     "@types/googlemaps": "^3.30.8",
     "angular-modal-gallery": "^5.5.0",
+    "angularfire2": "^5.0.0-rc.2",
     "bootstrap": "^4.1.0",
     "bootswatch": "^4.1.0",
     "core-js": "^2.4.1",
+    "firebase": "^4.13.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^1.9.1",
